--- a/app/composer.json
+++ b/app/composer.json
@@ -1,19 +1,3 @@
-{
-    "name": "bp-wp10-dataportal",
-    "config": {
-        "vendor-dir": "Vendor"
-    },
-    "require": {
-	"php": "~5.5",
-	"ext-imagick": "*",
-        "elasticsearch/elasticsearch": "~2.0",
-        "components/jquery": "^2.1",
-        "semantic/ui": "^2.1.8"
-    },
-    "scripts": {
-        "post-install-cmd": [
-            "ln -sf ../../Vendor/semantic/ui webroot/libs/Semantic-UI",
-            "ln -sf ../../Vendor/components/jquery webroot/libs/jquery"
-        ]
-    }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:330743d3d07d3bee48b1d9c754872849dfcc0811786a061da65829c4c966d8ec
+size 476
