--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,3 @@
-{
-	"name": "cakephp/cakephp",
-	"description": "The CakePHP framework",
-	"type": "library",
-	"keywords": ["framework"],
-	"homepage": "http://cakephp.org",
-	"license": "MIT",
-	"authors": [
-		{
-			"name": "CakePHP Community",
-			"homepage": "https://github.com/cakephp/cakephp/graphs/contributors"
-		}
-	],
-	"support": {
-		"issues": "https://github.com/cakephp/cakephp/issues",
-		"forum": "http://stackoverflow.com/tags/cakephp",
-		"irc": "irc://irc.freenode.org/cakephp",
-		"source": "https://github.com/cakephp/cakephp"
-	},
-	"require": {
-		"php": ">=5.3.0",
-		"ext-mcrypt": "*"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "3.7.*",
-		"cakephp/debug_kit" : "^2.2.0",
-		"cakephp/cakephp-codesniffer": "^1.0.0"
-	},
-	"bin": [
-		"lib/Cake/Console/cake"
-	]
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:e314f4290505139e100d47e2bd4b67fd2d2b59bcc17d2f39ba3198459a76df06
+size 749
